<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_login" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="56dp"
                android:layout_marginBottom="90dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesanspro_bold"
                    android:text="@string/login_login"
                    android:textColor="@color/white"
                    android:textSize="34sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/login_email"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/login_password"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:gravity="right|center_vertical"
                    android:text="Forgot password"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/button_gradient"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/login_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="60dp"
                android:clickable="true"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/login_signup"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>